src/ui/snapshots/coxtop__ui__tests__a_failed_status_replaces_the_key_bar.snap
---
source: src/ui/mod.rs
assertion_line: 558
expression: "excerpt(&app, ThemeId::Regatta, &[37..40])"
---
│no runs ended yet                                                                                                     │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
failed (exit 2): no such run
