src/ui/snapshots/coxtop__ui__tests__an_ok_status_replaces_the_key_bar.snap
---
source: src/ui/mod.rs
assertion_line: 551
expression: "excerpt(&app, ThemeId::Regatta, &[37..40])"
---
│no runs ended yet                                                                                                     │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
stopped dash-feed-1
