src/ui/snapshots/coxtop__ui__tests__renders_panel_card_regatta.snap
---
source: src/ui/mod.rs
assertion_line: 1350
expression: screen(&buffer)
---
╭ 1 chair ────────────────────────────╮╭ 2 spend ────────────────────────────╮╭decision────────────────────────────────╮
│● chair@omarchy:1 @ omarchy · epoch 1││5 hour ░░░░ 10% · resets 2 AM        ││Ship the preview?                       │
│lands today 0 (- phases) · needs you ││week   █░░│ 20% of 90% stop · Sun 4 A││Spend is under the stop.                │
│tick - · idle · 0 refused or failed t││                                     ││asked 00:00                             │
╰─────────────────────────────────────╯╰─────────────────────────────────────╯│                                        │
╭ 3 machines ──────────────────────────────────╮╭ 4 lanes over 24h ──────────╮│1. ship                                 │
│  omarchy ■■■ 1/3 ● login ok 12s              ││                           ⢸││2. hold                                 │
│                                              ││                           ⢸││                                        │
│                                              ││                           ⢸││number selects, y confirms, Esc clears, │
│                                              ││00:00 lanes in use · peak 1 ││Tab goes to the session                 │
╰──────────────────────────────────────────────╯╰────────────────────────────╯│                                        │
╭ 5 runs ────────────────────────────────────────────────────────────────────╮╰────────────────────────────────────────╯
│  RUN          MACHINE    STAGE                               ATT    COST ST│┌ chair · ` focus · \ close · ~ width ───┐
│▶ alpha-1      omarchy    p1 · build                            1   $0.50 ● ││chair> waiting for you                  │
╰────────────────────────────────────────────────────────────────────────────╯│                                        │
╭ 6 queue ──────────────────────────────────╮╭ 9 inbox ──────────────────────╮│                                        │
│                                           ││✓ nothing waiting on you       ││                                        │
│                                           ││                               ││                                        │
│                                           ││                               ││                                        │
│                                           ││                               ││                                        │
│                                           ││                               ││                                        │
│                                           ││                               ││                                        │
╰───────────────────────────────────────────╯╰───────────────────────────────╯│                                        │
╭ 8 run cost ────────────────────────────────────────────────────────────────╮│                                        │
│                                                                            ││                                        │
│                                                                            ││                                        │
│                                                                            ││                                        │
│                                                                            ││                                        │
│                                                                            ││                                        │
│                                                                            ││                                        │
│                                                                            ││                                        │
│                                                                            ││                                        │
│                                                                            ││                                        │
│                                                                            ││                                        │
╰────────────────────────────────────────────────────────────────────────────╯│                                        │
╭ 7 history ─────────────────────────────────────────────────────────────────╮│                                        │
│today  0 lands  0 quarantines  $0.00  0 runs                                ││                                        │
│no runs ended yet                                                           ││                                        │
╰────────────────────────────────────────────────────────────────────────────╯│                                        │
1-9 frames │ p pause  k kill  m move · : palette  w watch  $ spend  h health  └────────────────────────────────────────┘
