src/ui/snapshots/coxtop__ui__tests__renders_panel_closed_harbor_light.snap
---
source: src/ui/mod.rs
assertion_line: 1178
expression: text
---
╭ 1 chair ─────────────────────────────────────────────────╮╭ 2 spend ─────────────────────────────────────────────────╮
│● chair@omarchy:1 @ omarchy · epoch 1 · beat 4s · live    ││5 hour ██░░░░░░░░░░░░░░░░░░░░░░ 10% · resets 2 AM         │
│lands today 0 (- phases) · needs you 0 · drafts - · housek││week   █████░░░░░░░░░░░░░░░░│░░ 20% of 90% stop · Sun 4 AM│
│tick - · idle · 0 refused or failed today                 ││                                                          │
╰──────────────────────────────────────────────────────────╯╰──────────────────────────────────────────────────────────╯
╭ 3 machines ──────────────────────────────────╮╭ 4 lanes over 24h ────────────────────────────────────────────────────╮
│  omarchy ■■■ 1/3 ● login ok 12s              ││                         ⢸ alpha-1      p1 · build               $0.50│
│                                              ││                         ⢸                                            │
│                                              ││                         ⢸                                            │
│                                              ││00:00                   lanes in use · peak 1                    00:00│
╰──────────────────────────────────────────────╯╰──────────────────────────────────────────────────────────────────────╯
╭ 5 runs ──────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│  RUN          MACHINE    STAGE                               ATT    COST STATUS                                      │
│▶ alpha-1      omarchy    p1 · build                            1   $0.50 ● running                                   │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ 6 queue ──────────────────────────────────────────────────────────╮╭ 9 inbox ────────────────────────────────────────╮
│                                                                   ││✓ nothing waiting on you                         │
│                                                                   ││                                                 │
│                                                                   ││                                                 │
│                                                                   ││                                                 │
│                                                                   ││                                                 │
│                                                                   ││                                                 │
╰───────────────────────────────────────────────────────────────────╯╰─────────────────────────────────────────────────╯
╭ 8 run cost ──────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ 7 history ───────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│today  0 lands  0 quarantines  $0.00  0 runs                                                                          │
│no runs ended yet                                                                                                     │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
1-9 frames · ←→ focus · ↑↓ select · ⏎ drill down · t theme · v layout · q quit │ p pause  k kill  m move · : palette
