src/ui/snapshots/coxtop__ui__tests__renders_panel_open_harbor_light.snap
---
source: src/ui/mod.rs
assertion_line: 1289
expression: text
---
╭ 1 chair ────────────────────────────╮╭ 2 spend ────────────────────────────╮┌ chair · Ctrl-] leaves ─────────────────┐
│● chair@omarchy:1 @ omarchy · epoch 1││5 hour ░░░░ 10% · resets 2 AM        ││chair> waiting for you                  │
│lands today 0 (- phases) · needs you ││week   █░░│ 20% of 90% stop · Sun 4 A││                                        │
│tick - · idle · 0 refused or failed t││                                     ││                                        │
╰─────────────────────────────────────╯╰─────────────────────────────────────╯│                                        │
╭ 3 machines ──────────────────────────────────╮╭ 4 lanes over 24h ──────────╮│                                        │
│  omarchy ■■■ 1/3 ● login ok 12s              ││                           ⢸││                                        │
│                                              ││                           ⢸││                                        │
│                                              ││                           ⢸││                                        │
│                                              ││00:00 lanes in use · peak 1 ││                                        │
╰──────────────────────────────────────────────╯╰────────────────────────────╯│                                        │
╭ 5 runs ────────────────────────────────────────────────────────────────────╮│                                        │
│  RUN          MACHINE    STAGE                               ATT    COST ST││                                        │
│▶ alpha-1      omarchy    p1 · build                            1   $0.50 ● ││                                        │
╰────────────────────────────────────────────────────────────────────────────╯│                                        │
╭ 6 queue ──────────────────────────────────╮╭ 9 inbox ──────────────────────╮│                                        │
│                                           ││✓ nothing waiting on you       ││                                        │
│                                           ││                               ││                                        │
│                                           ││                               ││                                        │
│                                           ││                               ││                                        │
│                                           ││                               ││                                        │
│                                           ││                               ││                                        │
╰───────────────────────────────────────────╯╰───────────────────────────────╯│                                        │
╭ 8 run cost ────────────────────────────────────────────────────────────────╮│                                        │
│                                                                            ││                                        │
│                                                                            ││                                        │
│                                                                            ││                                        │
│                                                                            ││                                        │
│                                                                            ││                                        │
│                                                                            ││                                        │
│                                                                            ││                                        │
│                                                                            ││                                        │
│                                                                            ││                                        │
│                                                                            ││                                        │
╰────────────────────────────────────────────────────────────────────────────╯│                                        │
╭ 7 history ─────────────────────────────────────────────────────────────────╮│                                        │
│today  0 lands  0 quarantines  $0.00  0 runs                                ││                                        │
│no runs ended yet                                                           ││                                        │
╰────────────────────────────────────────────────────────────────────────────╯│                                        │
chair · Ctrl-] leaves                                                         └────────────────────────────────────────┘
